--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,88 @@
 .App-link {
   color: #09d3ac;
 }
+
+.todo-container {
+  max-width: 600px;
+  padding: 6px;
+}
+
+.controls-container {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.todo-header {
+  display: flex;
+  padding: 10px;
+  justify-content: space-between;
+  border-bottom: 2px solid #ccc;
+  margin-bottom: 10px;
+}
+
+.todo-header-name {
+  font-size: 24px;
+  font-weight: 600;   
+}
+
+.todo-item {
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  padding: 4px;
+  margin-top: -1px;
+  position: relative;
+  flex-wrap: wrap;
+}
+
+.todo-item-left {
+  display: flex;
+  align-items: center;
+}
+
+.todo-item-name {
+  margin-bottom: 6px;
+}
+
+.todo-item-left>svg {
+  cursor: pointer;
+}
+
+.todo-item-completed{
+  font-style: italic;
+  color: #ddd;
+}
+
+.todo-item-notes {
+  flex: 1 100%;
+  font-size: 10px;
+  margin-left: 43px;
+  font-style: italic;
+  color: #8e8e8e;
+  position: absolute;
+  bottom: 0;
+}
+
+.todo-icons {
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.menu-links {
+  color: #fff;
+  margin-right: 70px;
+  font-size: 24px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.aboutme-container {
+  padding: 20px;
+}
+
+.active-page-link {    
+  border-bottom: 3px solid #fff;
+}
